<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:cardview="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="250dp"
    android:id="@+id/cardviewId"
    android:layout_margin="5dp"
    cardview:cardCornerRadius="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:contentDescription="Image of Recipe"
            android:id="@+id/food_img_id"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:src="@drawable/imag2"
            android:background="@color/colorAccent"
            android:scaleType="centerCrop" />

        <LinearLayout
            android:orientation="vertical"
            android:weightSum="2"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_weight="1"
                android:weightSum="3"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:layout_weight="1"
                    android:id="@+id/food_title_id"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/hint9"
                    android:textColor="#000000"
                    android:textSize="16sp" />
                <TextView
                    android:layout_weight="2"
                    android:id="@+id/food_cate_id"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/hint3"
                    android:textColor="#000000"
                    android:textSize="12sp" />
            </LinearLayout>
            <TextView
                android:layout_weight="1"
                android:id="@+id/food_discrept_id"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:maxLines="1"
                android:text="@string/hint10"
                android:textColor="#000000"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>